# vigra_core

./: CMakeLists.txt  README.md
include/vigra2/: algorithm.hxx  algorithm_nd.hxx  array_math.hxx  array_nd.hxx  arraynd.hxx  axistags.hxx  box.hxx  concepts.hxx  config.hxx  config_version.hxx  convolution_atoms.hxx  convolution_detail.hxx  convolution_kernels.hxx  error.hxx  fixedpoint.hxx  gaussians.hxx  handle.hxx  handle_nd.hxx  iterator_nd.hxx  mathutil.hxx  metaprogramming.hxx  numeric_traits.hxx  pointer_nd.hxx  shape.hxx  splines.hxx  tags.hxx  tiny_linalg.hxx  tinyarray.hxx  unittest.hxx  utilities.hxx  windows.h
test/: CMakeLists.txt  test_algorithm.cxx  test_algorithm_nd.cxx  test_array_math.cxx  test_array_nd.cxx  test_arraynd.cxx  test_axistags.cxx  test_concepts.cxx  test_convolution_atoms.cxx  test_convolution_detail.cxx  test_convolution_kernels.cxx  test_error.cxx  test_fixedpoint.cxx  test_gaussians.cxx  test_gridgraph.cxx  test_iterator_nd.cxx  test_mathutil.cxx  test_numeric_traits.cxx  test_splines.cxx  test_tinyarray.cxx
